<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Camara.Camara">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvArchivo"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:onClick="Guardar"
        android:text="@string/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnDescarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:onClick="Descargar"
        android:text="@string/btnDescarga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnCargar"
        app:layout_constraintTop_toBottomOf="@+id/etArchivo" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="214dp"
        android:layout_height="145dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCargar"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/etArchivo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/etArchivo"
        app:layout_constraintBottom_toTopOf="@+id/btnCargar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:onClick="Buscar"
        android:text="@string/btnBuscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/btnCamfot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="Captura"
        android:text="@string/btnCamara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnBuscar"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto"
        app:layout_constraintVertical_bias="0.25" />

</android.support.constraint.ConstraintLayout>