<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="60dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/row_padding_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/row_padding_vertical">


        <TextView
            android:id="@+id/txvCedula_PresentadorCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/P_Cedula"
            android:textColor="@color/title"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvNombre_PresentadorCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvCedula_PresentadorCliente"
            android:text="@string/P_Nombre"
            android:textColor="@color/title" />

        <TextView
            android:id="@+id/txvTelefono_PresentadorCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/P_Telefono"
            android:textColor="@color/subtitle" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>