<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".Cliente.funciones_cliente">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvCedula_FuncionesCliente"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/P_Cedula" />

            <EditText
                android:id="@+id/txtCedula_FuncionesCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvNombre_FuncionesCliente"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/P_Nombre" />

            <EditText
                android:id="@+id/txtNombre_FuncionesCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvTelefono_FuncionesCliente"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:text="@string/P_Telefono" />

            <EditText
                android:id="@+id/txtTelefono_FuncionesCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:maxLength="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvDireccion_FuncionesCliente"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="@string/P_Direccion" />

            <EditText
                android:id="@+id/txtDireccion_FuncionesCliente"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.14"
                android:ems="10"
                android:inputType="textMultiLine" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvCorreo_FuncionesCliente"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/P_Correo" />

            <EditText
                android:id="@+id/txtCorreo_FuncionesCliente"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar_FuncionesCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Guardar"
                    android:text="@string/P_Guardar"
                    android:textColor="@color/TextoBotón"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/btnEliminar_FuncionesCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Eliminar"
                    android:text="@string/P_Eliminar"
                    android:textColor="@color/TextoBotón"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>